--- a/index.html
+++ b/index.html
@@ -1,109 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
-
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
-
-    <!--
-      This is the page head - it contains info the browser uses
-      Like the title, which appears on the browser tab but not inside the page
-      Further down you'll see the content that displays in the page
-    -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap & Finastra Design System</title>
+    <!-- Bootstrap CSS -->
     <link
-      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <title>Yoshita's Portfolio</title>
-
-    <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link href="style.css" rel="stylesheet" />
 
-    <!-- The website JavaScript file -->
-    <script src="/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
-    <div class="container mt-5">
-      <h1 class="display-4">Yoshita Jeswal</h1>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" style="color: var(--violet);">Design System</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-      <!-- Button Styles -->
-      <button type="button" class="btn btn-primary mr-2">Primary Button</button>
-      <button type="button" class="btn btn-secondary mr-2">
-        Secondary Button
-      </button>
-      <button type="button" class="btn btn-success">Success Button</button>
+    <!-- Header -->
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="https://images.unsplash.com/photo-1479030160180-b1860951d696?q=80&w=3072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption">
+            <h1 class="heading-text">Heading 1</h1>
+            <p class="heading-description">
+              This is Design System was inspired by Finastra's Design System.<br />
+              Above is H1 heading. This is a carousel with 3 images.<br />Beneath
+              are the other objects.
+            </p>
+            <a href="#" class="btn btn-primary btn-sm view-more">Small Button</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://images.unsplash.com/photo-1492724724894-7464c27d0ceb?q=80&w=3174&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption">
+            <h1 class="heading-text">Heading 1</h1>
+            <p class="heading-description">
+              This is Design System was inspired by Finastra's Design System.<br />
+              Above is H1 heading. This is a carousel with 3 images.<br />Beneath
+              are the other objects.
+            </p>
+            <a href="#" class="btn btn-primary btn-sm view-more">Small Button</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://images.unsplash.com/photo-1524879155785-9a17ac3a91fd?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption">
+            <h1 class="heading-text">Heading 1</h1>
+            <p class="heading-description">
+              This is Design System was inspired by Finastra's Design System.<br />
+              Above is H1 heading. This is a carousel with 3 images.<br />Beneath
+              are the other objects.
+            </p>
+            <a href="#" class="btn btn-primary btn-sm view-more">Small Button</a>
+          </div>
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
-      <!-- Typography -->
-      <h2 class="mt-4">User Experience Design</h2>
-      <p class="lead">
-        Welcome to my portfolio. I specialize in creating intuitive and visually
-        appealing user interfaces to enhance user experiences.
-      </p>
-
-      <h3 class="mt-4">Skills</h3>
-      <ul>
-        <li>User Research</li>
-        <li>Wireframing</li>
-        <li>Prototyping</li>
-        <li>Visual Design</li>
-      </ul>
-
+    <div class="container mt-4">
       <!-- Work Showcase Masonry Grid -->
       <div class="masonry">
         <div class="card custom-tall">
           <img
-            src="https://via.placeholder.com/600x600"
+            src="https://creatorspace.imgix.net/users/clrz3kt5r01yeqt01284pf26l/kqg2SYUbmdwCRCqe-Untitled_Artwork%25205.png?w=750&h=750"
             class="card-img-top"
             alt="Work 1"
           />
           <div class="card-body">
-            <h5 class="card-title">Work 1</h5>
+            <h3 class="card-title">Heading 3</h3>
             <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Cards use H3 for heading but the one with images use a medium size full width button.
             </p>
-            <a href="#" class="btn btn-primary">View More</a>
+            <a href="#" class="btn btn-primary btn-block view-more"
+              >Medium Button</a
+            >
           </div>
         </div>
         <div class="card custom-medium">
-          <img
-            src="https://via.placeholder.com/300x100"
-            class="card-img-top"
-            alt="Work 2"
-          />
           <div class="card-body">
-            <h5 class="card-title">Work 2</h5>
+            <h3 class="card-title">Heading 3</h3>
             <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Cards without imagesuse a large button size.
             </p>
-            <a href="#" class="btn btn-primary">View More</a>
+            <a href="#" class="btn btn-primary btn-lg view-more"
+              >Large Button</a
+            >
           </div>
         </div>
         <div class="card custom-short">
-          <img
-            src="https://via.placeholder.com/300x100"
-            class="card-img-top"
-            alt="Work 3"
-          />
           <div class="card-body">
-            <h5 class="card-title">Work 3</h5>
+            <h3 class="card-title">Colors</h3>
             <p class="card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              The Second Heading in this card is H5.<br>
+              These are the Design System colors:
             </p>
-            <a href="#" class="btn btn-primary">View More</a>
+            <div class="container no-padding">
+              <h5>Primary Colors</h5>
+              <div class="col violet">Violet</div>
+              <div class="col purple">Purple</div>
+              <div class="col blue">Blue</div>
+              <h5>Secondary Colors</h5>
+              <div class="col red">Red</div>
+              <div class="col orange">Orange</div>
+              <div class="col green">Green</div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+
+      <!-- Alerts -->
+      <div class="mt-4">
+  <h2 class="alert-text">Alerts</h2>
+  <p style="color:#fff">This heading uses H2 and following are the alert states:</p>
+  <div class="alert alert-success alert-design successful" role="alert">
+    <i class="fas fa-check-circle"></i> Success Alert
+  </div>
+  <div class="alert alert-info alert-design info" role="alert">
+    <i class="fas fa-info-circle"></i> Info Alert
+  </div>
+  <div class="alert alert-warning alert-design warning" role="alert">
+    <i class="fas fa-exclamation-triangle"></i> Warning Alert
+  </div>
+  <div class="alert alert-danger alert-design danger" role="alert">
+    <i class="fas fa-exclamation-triangle"></i> Danger Alert
+  </div>
+</div>
+     
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+      $(".carousel").carousel();
+    </script>
   </body>
 </html>
