--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="carousel-caption">
             <h1 class="heading-text">Heading 1</h1>
             <p class="heading-description">
-              This is Design System was inspired by Finastra's Design System.<br />
+              This is Design System was inspired by <b>Finastra's Design System</b>.<br />
               Above is H1 heading. This is a carousel with 3 images.<br />Beneath
               are the other objects.
             </p>
@@ -133,6 +133,8 @@
     </div>
 
     <div class="container mt-4">
+        <h2 class="alert-text">Hello!</h2>
+  <p style="color:#fff">This is ARTI 609: Web and Mobile Development Assignment.<br> This is done by <b>Yoshita Jeswal</b>. The font used throught out the website is Montserrat.</p>
       <!-- Work Showcase Masonry Grid -->
       <div class="masonry">
         <div class="card custom-tall">
