--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div class="container mt-4">
         <h2 class="alert-text">Hello!</h2>
-        <p style="color:#fff">This is ARTI 609: Web and Mobile Development Assignment.<br> This is done by <b>Yoshita Jeswal</b>. The font used throught out the website is Montserrat.</p>
+        <p style="color:#fff">This is ARTI 609: Web and Mobile Development Assignment.<br> This is done by <b>Yoshita Jeswal</b>. The body font is Montserrat.</p>
       <!-- Work Showcase Masonry Grid -->
       <div class="masonry">
         <div class="card custom-tall">
