--- a/index.html
+++ b/index.html
@@ -3,211 +3,162 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap & Finastra Design System</title>
-    <!-- Bootstrap CSS -->
+    <title>CleanSlate Design System with Bootstrap</title>
     <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
     />
-    <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Custom CSS -->
-    <link href="style.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" style="color: var(--violet);">Design System</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">CleanSlate</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Services
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Service 1</a>
+              <a class="dropdown-item" href="#">Service 2</a>
+              <a class="dropdown-item" href="#">Service 3</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
       </div>
     </nav>
+    <div class="container">
+      <h1 class="display-1 primary">CleanSlate Design System</h1>
+      <p class="lead primary">
+        CleanSlate is a minimalist design system focusing on clarity and
+        simplicity, offering a clean and modern aesthetic for web interfaces.
+      </p>
 
-    <!-- Header -->
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="https://images.unsplash.com/photo-1479030160180-b1860951d696?q=80&w=3072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="d-block w-100"
-            alt="..."
-          />
-          <div class="carousel-caption">
-            <h1 class="heading-text">Heading 1</h1>
-            <p class="heading-description">
-              This is Design System was inspired by Finastra's Design System.<br />
-              Above is H1 heading. This is a carousel with 3 images.<br />Beneath
-              are the other objects.
-            </p>
-            <a href="#" class="btn btn-primary btn-sm view-more">Small Button</a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://images.unsplash.com/photo-1492724724894-7464c27d0ceb?q=80&w=3174&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="d-block w-100"
-            alt="..."
-          />
-          <div class="carousel-caption">
-            <h1 class="heading-text">Heading 1</h1>
-            <p class="heading-description">
-              This is Design System was inspired by Finastra's Design System.<br />
-              Above is H1 heading. This is a carousel with 3 images.<br />Beneath
-              are the other objects.
-            </p>
-            <a href="#" class="btn btn-primary btn-sm view-more">Small Button</a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://images.unsplash.com/photo-1524879155785-9a17ac3a91fd?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            class="d-block w-100"
-            alt="..."
-          />
-          <div class="carousel-caption">
-            <h1 class="heading-text">Heading 1</h1>
-            <p class="heading-description">
-              This is Design System was inspired by Finastra's Design System.<br />
-              Above is H1 heading. This is a carousel with 3 images.<br />Beneath
-              are the other objects.
-            </p>
-            <a href="#" class="btn btn-primary btn-sm view-more">Small Button</a>
-          </div>
+      <h2 class="display-2 primary">Heading Styles</h2>
+      <p class="lead">Below are examples of heading styles:</p>
+      <h1 class="display-1 primary">Heading 1</h1>
+      <h2 class="display-2 primary">Heading 2</h2>
+      <h3 class="display-3 primary">Heading 3</h3>
+      <h4 class="display-4">Heading 4</h4>
+
+      <h2 class="display-2 primary">Buttons</h2>
+      <p class="lead">Buttons come in three sizes:</p>
+      <button class="btn btn-primary btn-sm">Small Button</button>
+      <button class="btn btn-primary btn-md">Medium Button</button>
+      <button class="btn btn-primary btn-lg">Large Button</button>
+
+      <!-- Cards -->
+      <h2 class="display-2 primary">Cards</h2>
+      <p class="lead">Example of cards:</p>
+      <div class="card mb-3">
+        <img src="https://picsum.photos/800/400?random=1" class="card-img-top" alt="Image" />
+        <!-- Placeholder image -->
+        <div class="card-body">
+          <h2 class="card-title">Card Title</h2>
+          <p class="card-text">This is a card with an image.</p>
         </div>
       </div>
-      <a
-        class="carousel-control-prev"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#carouselExampleIndicators"
-        role="button"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <div class="container mt-4">
-        <h2 class="alert-text">Hello!</h2>
-        <p style="color:#fff">This is ARTI 609: Web and Mobile Development Assignment.<br> This is done by <b>Yoshita Jeswal</b>. The body font is Montserrat.</p>
-      <!-- Work Showcase Masonry Grid -->
-      <div class="masonry">
-        <div class="card custom-tall">
-          <img
-            src="https://creatorspace.imgix.net/users/clrz3kt5r01yeqt01284pf26l/kqg2SYUbmdwCRCqe-Untitled_Artwork%25205.png?w=750&h=750"
-            class="card-img-top"
-            alt="Work 1"
-          />
-          <div class="card-body">
-            <h3 class="card-title">Heading 3</h3>
-            <p class="card-text">
-              Cards use H3 for heading but the one with images use a medium size full width button.
-            </p>
-            <a href="#" class="btn btn-primary btn-block view-more"
-              >Medium Button</a
-            >
-          </div>
-        </div>
-        <div class="card custom-medium">
-          <div class="card-body">
-            <h3 class="card-title">Heading 3</h3>
-            <p class="card-text">
-              Cards without imagesuse a large button size.
-            </p>
-            <a href="#" class="btn btn-primary btn-lg view-more"
-              >Large Button</a
-            >
-          </div>
-        </div>
-        <div class="card custom-short">
-          <div class="card-body">
-            <h3 class="card-title">Colors</h3>
-            <p class="card-text">
-              The Second Heading in this card is H5.<br>
-              These are the Design System colors:
-            </p>
-            <div class="container no-padding">
-              <h5>Primary Colors</h5>
-              <div class="col violet">Violet</div>
-              <div class="col purple">Purple</div>
-              <div class="col blue">Blue</div>
-              <h5>Secondary Colors</h5>
-              <div class="col red">Red</div>
-              <div class="col orange">Orange</div>
-              <div class="col green">Green</div>
-            </div>
-          </div>
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Card Title</h2>
+          <p class="card-text">This is a card without an image.</p>
         </div>
       </div>
 
       <!-- Alerts -->
-      <div class="mt-4">
-  <h2 class="alert-text">Alerts</h2>
-  <p style="color:#fff">This heading uses H2 and following are the alert states:</p>
-  <div class="alert alert-success alert-design successful" role="alert">
-    <i class="fas fa-check-circle"></i> Success Alert
-  </div>
-  <div class="alert alert-info alert-design info" role="alert">
-    <i class="fas fa-info-circle"></i> Info Alert
-  </div>
-  <div class="alert alert-warning alert-design warning" role="alert">
-    <i class="fas fa-exclamation-triangle"></i> Warning Alert
-  </div>
-  <div class="alert alert-danger alert-design danger" role="alert">
-    <i class="fas fa-exclamation-triangle"></i> Danger Alert
-  </div>
-</div>
-     
+      <h2 class="display-2 primary">Alerts</h2>
+      <p class="lead">Example of alerts:</p>
+      <div class="alert alert-success success" role="alert">Success Alert</div>
+      <div class="alert alert-info info" role="alert">Info Alert</div>
+      <div class="alert alert-warning warning" role="alert">Warning Alert</div>
+      <div class="alert alert-danger danger" role="alert">Error Alert</div>
 
+      <!-- Carousel -->
+      <h2 class="display-2 primary">Carousel</h2>
+      <p class="lead">Example of carousel:</p>
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://picsum.photos/800/400?random=1"
+              class="d-block w-100"
+              alt="First slide"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://picsum.photos/800/400?random=2"
+              class="d-block w-100"
+              alt="Second slide"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+
+    <!-- Include Bootstrap's JavaScript for dropdowns and carousel -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-      $(".carousel").carousel();
-    </script>
   </body>
 </html>
